metà user story 7

--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ yarn-error.log
 /storage/announcements.index-shm
 /storage/announcements.index-wal
 /storage/announcements.index
+google_credential.json
 
